--- a/style.css
+++ b/style.css
@@ -43,3 +43,14 @@ body {
   flex-direction: column;
   align-items: flex-end;
 }
+
+.toast {
+  background-color: #fff;
+  border-radius: 5px;
+  padding: 1rem 2rem;
+  margin: 0.5rem;
+}
+
+.toast.info {
+  color: rebeccapurple;
+}
