--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   justify-content: center;
   height: 100vh;
   overflow: hidden;
-  margin: 0;
+  margin: 5;
 }
 
 .btn {
@@ -21,8 +21,8 @@ body {
   color: rebeccapurple;
   font-family: inherit;
   font-weight: bold;
-  padding: 1rem;
-  border-radius: 5px;
+  padding: 14rem;
+  border-radius: 10px;
   border: none;
   cursor: pointer;
 }
@@ -37,8 +37,8 @@ body {
   
 #toasts {
   position: fixed;
-  bottom: 10px;
-  right: 10px;
+  bottom: 15px;
+  right: 20px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -46,7 +46,7 @@ body {
 
 .toast {
   background-color: #fff;
-  border-radius: 5px;
+  border-radius: 8px;
   padding: 1rem 2rem;
   margin: 0.5rem;
 }
@@ -56,9 +56,9 @@ body {
 }
 
 .toast.success {
-  color: green;
+  color: red;
 }
 
 .toast.error {
-  color: red;
+  color: blue;
 }
